--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "data/plugins/monasca-grafana-datasource"]
 	path = data/plugins/monasca-grafana-datasource
 	url = https://github.com/openstack/monasca-grafana-datasource
+[submodule "data/plugins/monasca-grafana-app"]
+	path = data/plugins/monasca-grafana-app
+	url = https://github.com/mohamhab/monasca-grafana-app
